--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,13 @@
-version: '3'
+version: '2'
 services:
   app:
-    container_name: app
     build: .
     ports:
      - "8080:8080"
-    depends_on: 
-      - redis 
-    networks: 
-      - backend
-   
-  redis:
-    container_name: redis
-    image: redis
-    command: [ "redis-server", "--protected-mode", "no" ]
+    links:
+      - "db:redis"
+  db:
+    image: "redis:alpine"
+    hostname: redis
     ports:
-      - "6379:6379"
-    expose:
-      - "6379"  
-    networks:
-      - backend
-
-networks:
-  backend:
+     - "6379:6379"
