--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port = 8080
 spring.cache.type=redis
 spring.redis.host=redis
 spring.redis.port=6379
+
+
+management.endpoints.web.exposure.include=*
+
+management.endpoint.health.show-details=always
