--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port = 8080
 
+# Redis configuration
 spring.cache.type=redis
 spring.redis.host=redis
 spring.redis.port=6379
 
-
+# Actuator configuration
 management.endpoints.web.exposure.include=*
-
 management.endpoint.health.show-details=always
