--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -17,20 +17,20 @@ rule_files:
 
 # A scrape configuration containing exactly one endpoint to scrape:
 scrape_configs:
-  - job_name: 'app'
+  - job_name: 'shorterurl'
 
     scrape_interval: 5s
 
-    metrics_path: '/prometheus'
+    metrics_path: '/actuator/prometheus'
 
     static_configs:
-         - targets: ['app:8080']
+         - targets: ['shorterurl:8080']
 
   - job_name: 'cadvisor'
 
     scrape_interval: 5s
 
-    metrics_path: '/metrics'
+    metrics_path: '/actuator/metrics'
 
     static_configs:
          - targets: ['cadvisor:8080']
