--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.redis.port=6379
 # Actuator configuration
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoints.enabled-by-default=true
